--- a/about.html
+++ b/about.html
@@ -1,64 +1,4 @@
-<!doctype html><html lang='en'><head><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><script src='https://cdn.tailwindcss.com'></script><style>:root{--bg:#F6ECE5;--copper:#C4682D;--copper-d:#9F4F1E;--text:#2B2B2B;}body{background:var(--bg);color:var(--text);}.nav-link{color:var(--copper);font-weight:600;}.nav-link.active{text-decoration:underline;text-underline-offset:6px;}.btn{background:var(--copper);color:#fff;padding:.6rem 1.2rem;border-radius:.6rem;}.btn:hover{background:var(--copper-d);}.card{background:#fff;border-radius:1rem;box-shadow:0 10px 20px rgba(0,0,0,.05);}</style>
-  <title>About Me — Srinidhii Sreeram | Bharatanatyam Dancer (London)</title>
-  <link rel="canonical" href="https://srinidhii-site.vercel.app/about.html">
-
-  <meta name="description" content="Srinidhii Sreeram is a London-based Bharatanatyam dancer and disciple of Kalaimamani Smt. Padmini Krishnamurthy (Sri Saraswathi Gana Nilayam, Chennai). Her performances and teaching blend classical tradition with contemporary artistry, captivating audiences across India, the UK, USA, Dubai, and Muscat.">
-  <meta name="keywords" content="Bharatanatyam, Indian classical dance, Srinidhii Sreeram, London, dancer, abhinaya, nrtta, classes, performances">
-  <meta name="author" content="Srinidhii Sreeram">
-
-  <!-- Open Graph -->
-  <meta property="og:type" content="website">
-  <meta property="og:title" content="About Me — Srinidhii Sreeram | Bharatanatyam Dancer (London)">
-  <meta property="og:description" content="Srinidhii Sreeram is a London-based Bharatanatyam dancer and disciple of Kalaimamani Smt. Padmini Krishnamurthy (Sri Saraswathi Gana Nilayam, Chennai). Her performances and teaching blend classical tradition with contemporary artistry, captivating audiences across India, the UK, USA, Dubai, and Muscat.">
-  <meta property="og:url" content="https://srinidhii-site.vercel.app/about.html">
-  <meta property="og:image" content="https://srinidhii-site.vercel.app/home1.png">
-
-  <!-- Twitter -->
-  <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="About Me — Srinidhii Sreeram | Bharatanatyam Dancer (London)">
-  <meta name="twitter:description" content="Srinidhii Sreeram is a London-based Bharatanatyam dancer and disciple of Kalaimamani Smt. Padmini Krishnamurthy (Sri Saraswathi Gana Nilayam, Chennai). Her performances and teaching blend classical tradition with contemporary artistry, captivating audiences across India, the UK, USA, Dubai, and Muscat.">
-  <meta name="twitter:image" content="https://srinidhii-site.vercel.app/home1.png">
-
-  <script type="application/ld+json">
-  {
-  "@context": "https://schema.org",
-  "@type": "Person",
-  "name": "Srinidhii Sreeram",
-  "jobTitle": "Bharatanatyam Dancer",
-  "address": {
-    "@type": "PostalAddress",
-    "addressLocality": "London",
-    "addressCountry": "UK"
-  },
-  "url": "https://srinidhii-site.vercel.app",
-  "image": "https://srinidhii-site.vercel.app/home1.png",
-  "sameAs": [
-    "https://instagram.com/srinidhii.sreeram"
-  ],
-  "knowsAbout": [
-    "Bharatanatyam",
-    "Indian classical dance",
-    "Abhinaya",
-    "Nrtta",
-    "Performance"
-  ]
-}
-  </script>
-  <script type="application/ld+json">
-  {
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "url": "https://srinidhii-site.vercel.app",
-  "name": "Srinidhii Sreeram",
-  "potentialAction": {
-    "@type": "SearchAction",
-    "target": "https://srinidhii-site.vercel.app/?q={search_term_string}",
-    "query-input": "required name=search_term_string"
-  }
-}
-  </script>
-
-</head><body class='antialiased'><header class='sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b'><div class='max-w-6xl mx-auto px-6 py-4 flex items-center gap-10'><a href='index.html' class='nav-link '>Home</a><a href='about.html' class='nav-link active'>About me</a><a href='gallery.html' class='nav-link '>Gallery</a><a href='contact.html' class='nav-link '>Contact us</a></div></header><main class='max-w-6xl mx-auto px-6 md:px-10 lg:px-16 py-12'><div class='grid md:grid-cols-2 gap-10 lg:gap-16 items-start'><div><img src='about-portrait.png' class='w-full rounded-lg' alt='Portrait'></div><div><p class='leading-8 max-w-[62ch] md:pr-6 lg:pr-10'><span>Srinidhii Sreeram is a senior disciple of Kalaimamani Smt. Padmini Krishnamurthy, Director of Sri Saraswathi Gana Nilayam, Chennai, and Sri Saraswathi Natyalaya, Muscat.</p><p>She presented her Arangetram in July 2013 in the august presence of Late Guru Kalaimamani Ranganayaki Jayaraman and Smt. Nandini Ramani. Since then, Srinidhii has delivered numerous solo and group recitals across the globe including in India, Muscat, Dubai, the United States, and the United Kingdom earning recognition for her rhythmic precision, expressive abhinaya, and commanding stage presence.</p><p>Most recently, she was invited to perform at the prestigious Cleveland Thyagaraja Festival (USA), where her performance received widespread recognition and critical acclaim.</p><p>Now based in London, Srinidhii continues to explore and share the timeless beauty of Bharatanatyam, blending tradition with her own artistic voice through performances and teaching.</span></p></div></div></main>
+<!doctype html><html lang='en'><head><meta charset='utf-8'><meta name='viewport' content='width=device-width, initial-scale=1'><title>Srinidhii Sreeram</title><meta name='description' content='Bharatanatyam artist and teacher based in London. Performances, classes, and workshops.'><script src='https://cdn.tailwindcss.com'></script><style>:root{--bg:#F6ECE5;--copper:#C4682D;--copper-d:#9F4F1E;--text:#2B2B2B;}body{background:var(--bg);color:var(--text);}.nav-link{color:var(--copper);font-weight:600;}.nav-link.active{text-decoration:underline;text-underline-offset:6px;}.btn{background:var(--copper);color:#fff;padding:.6rem 1.2rem;border-radius:.6rem;}.btn:hover{background:var(--copper-d);}.card{background:#fff;border-radius:1rem;box-shadow:0 10px 20px rgba(0,0,0,.05);}</style></head><body class='antialiased'><header class='sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b'><div class='max-w-6xl mx-auto px-6 py-4 flex items-center gap-10'><a href='index.html' class='nav-link '>Home</a><a href='about.html' class='nav-link active'>About me</a><a href='gallery.html' class='nav-link '>Gallery</a><a href='contact.html' class='nav-link '>Contact us</a></div></header><main class='max-w-6xl mx-auto px-6 py-10'><div class='grid md:grid-cols-2 gap-8 items-start'><div><img src='about-portrait.png' class='w-full rounded-lg' alt='Portrait'></div><div><p class='leading-8'>Srinidhii Sreeram is a senior disciple of Kalaimamani Smt. Padmini Krishnamurthy, Director Sri Saraswathi Gana Nilayam, Chennai & Sri Saraswathi Natyalaya, Muscat. Having begun her journey in the Indian classical art form at the age of 6, Srinidhii has since nurtured her craft and has been a part of numerous recitals staged as part of the dance school. Srinidhii gave her maiden performance (Arangetram) in July 2013 in the august presence of Late. Guru Kalaimamani Ranganayaki Jayaraman, and industry stalwart Smt. Nandini Ramani. She has since given various solo and group performances regularly in India, Muscat, Dubai, and USA. Most recently, she was invited to perform at the prestigious Cleveland Thyagaraja Festival, USA and has been recognized for her strong grasp of rhythm, expressive rendition of abhinaya, and energetic performances.</p><ul class='mt-6 list-disc pl-6 space-y-2'><li>Over the years, Srinidhi continued a holistic education in dance and completed all 6 levels of the Prayathnam Dance Examinations. In 2022, She was conferred the title - ‘Yathna Praveena’</li><li>In recognition of her art, she was awarded the ‘Young Artist Grant for Performing Arts’ from the Government of Tamil Nadu and has been recognized as a Graded Artist by the Government of India.</li><li>Srinidhii began her teaching journey early on and has been instrumental in training students as part of the dance institution. Her style of teaching involves a knack for understanding her student’s strengths, a fun yet focussed approach to learning, and creating a space for creative exploration for children and adults alike</li></ul></div></div></main>
 
 <footer class="mt-10 bg-[#111] text-[#ddd]">
   <div class="max-w-6xl mx-auto px-6 py-8 grid gap-6 md:grid-cols-2 items-start">
