--- a/contact.html
+++ b/contact.html
@@ -36,12 +36,12 @@
   <div class="flex justify-center md:justify-start">
     <div class="card w-full max-w-xl p-8 self-start">
       <h1 class="text-4xl font-extrabold mb-4">Contact me</h1>
-      <p class="mb-2 text-[15px]">Please fill out the form below for any queries related to events, production or training.</p>
+<div class="form-intro">
+<p class="mb-2 text-[15px]">Please fill out the form below for any queries related to events, production or training.</p>
 <p class="mb-1"><strong>Phone:</strong> <a href="tel:+447767976340">+44 7767 976 340</a></p>
-<p class="mb-4"><strong>Email:</strong> <a href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p>
-<div class="h-1 w-16 bg-[var(--copper)] mb-6"></div>
-      
-      <p class="mb-2 text-[15px]">Please fill out the form below for any queries related to events, production or training.</p><p class="mb-1"><strong>Phone:</strong> <a href="tel:+447767976340">+44 7767 976 340</a></p><p class="mb-2 text-[15px]">Please fill out the form below for any queries related to events, production or training.</p><p class="mb-1"><strong>Phone:</strong> <a href="tel:+447767976340">+44 7767 976 340</a></p><p class="mb-4"><strong>Email:</strong> <a href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p><form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate action=\"https://formspree.io/f/xanpdnvq\" action="https://formspree.io/f/xanpdnvq">
+<p class="mb-6"><strong>Email:</strong> <a href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p>
+</div>
+<form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate action=\"https://formspree.io/f/xanpdnvq\" action="https://formspree.io/f/xanpdnvq" action="https://formspree.io/f/xanpdnvq">
         <input name="name" placeholder="Name" required class="border rounded p-3">
         <input type="email" name="email" placeholder="Email" required class="border rounded p-3">
         <input name="phone" placeholder="Phone Number including country code" class="border rounded p-3 md:col-span-2">
