--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
 <p class="mb-1"><strong>Phone:</strong> <a href="tel:+447767976340">+44 7767 976 340</a></p>
 <p class="mb-6"><strong>Email:</strong> <a href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p>
 </div>
-<form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate action=\"https://formspree.io/f/xanpdnvq\" action="https://formspree.io/f/xanpdnvq" action="https://formspree.io/f/xanpdnvq">
+<form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate action=\"https://formspree.io/f/xanpdnvq\" action="https://formspree.io/f/xanpdnvq" action="https://formspree.io/f/xanpdnvq" method="POST" action="https://formspree.io/f/xanpdnvq">
         <input name="name" placeholder="Name" required class="border rounded p-3">
         <input type="email" name="email" placeholder="Email" required class="border rounded p-3">
         <input name="phone" placeholder="Phone Number including country code" class="border rounded p-3 md:col-span-2">
