--- a/gallery.html
+++ b/gallery.html
@@ -18,9 +18,9 @@
 <header class="sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b">
   <div class="max-w-6xl mx-auto px-6 py-4 flex items-center gap-10">
     <a href="/" class="nav-link">Home</a>
-    <a href="about.html" class="nav-link">About me</a>
+    <a href="about.html" class="nav-link">About</a>
     <a href="gallery.html" class="nav-link active">Gallery</a>
-    <a href="contact.html" class="nav-link">Contact us</a>
+    <a href="contact.html" class="nav-link">Contact</a>
   </div>
 </header>
 
@@ -125,9 +125,9 @@
     <div>
       <h3 class="text-white font-semibold mb-3">Explore</h3>
       <ul class="space-y-1.5 text-sm">
-        <li><a class="hover:underline" href="/about.html">About me</a></li>
+        <li><a class="hover:underline" href="/about.html">About</a></li>
         <li><a class="hover:underline" href="/gallery.html">Gallery</a></li>
-        <li><a class="hover:underline" href="/contact.html">Contact us</a></li>
+        <li><a class="hover:underline" href="/contact.html">Contact</a></li>
       </ul>
     </div>
     <div>
