--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,9 @@
 <header class="sticky top-0 z-30 bg-[var(--bg)]/95 backdrop-blur border-b">
   <div class="max-w-6xl mx-auto px-6 py-4 flex items-center gap-10">
     <a href="/" class="nav-link">Home</a>
-    <a href="about.html" class="nav-link">About me</a>
+    <a href="about.html" class="nav-link">About</a>
     <a href="gallery.html" class="nav-link">Gallery</a>
-    <a href="contact.html" class="nav-link active">Contact us</a>
+    <a href="contact.html" class="nav-link active">Contact</a>
   </div>
 </header>
 
@@ -36,12 +36,9 @@
   <div class="flex justify-center md:justify-start">
     <div class="card w-full max-w-xl p-8 self-start">
       <h1 class="text-4xl font-extrabold mb-4">Contact me</h1>
-<div class="form-intro">
-<p class="mb-2 text-[15px]">Please fill out the form below for any queries related to events, production or training.</p>
-<p class="mb-1"><strong>Phone:</strong> <a href="tel:+447767976340">+44 7767 976 340</a></p>
-<p class="mb-6"><strong>Email:</strong> <a href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p>
-</div>
-<form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate action=\"https://formspree.io/f/xanpdnvq\" action="https://formspree.io/f/xanpdnvq" action="https://formspree.io/f/xanpdnvq" method="POST" action="https://formspree.io/f/xanpdnvq">
+      <div class="h-1 w-16 bg-[var(--copper)] mb-6"></div>
+      
+      <p class="mb-2 text-[15px]">Please fill out the form below for any queries related to events, production or training.</p><p class="mb-1"><strong>Phone:</strong> <a href="tel:+447767976340">+44 7767 976 340</a></p><p class="mb-4"><strong>Email:</strong> <a href="mailto:srinidhiisreeram@gmail.com">srinidhiisreeram@gmail.com</a></p><form id="enquiry-form" class="grid grid-cols-1 md:grid-cols-2 gap-4" novalidate>
         <input name="name" placeholder="Name" required class="border rounded p-3">
         <input type="email" name="email" placeholder="Email" required class="border rounded p-3">
         <input name="phone" placeholder="Phone Number including country code" class="border rounded p-3 md:col-span-2">
@@ -85,9 +82,9 @@
     <div>
       <h3 class="text-white font-semibold mb-3">Explore</h3>
       <ul class="space-y-1.5 text-sm">
-        <li><a class="hover:underline" href="/about.html">About me</a></li>
+        <li><a class="hover:underline" href="/about.html">About</a></li>
         <li><a class="hover:underline" href="/gallery.html">Gallery</a></li>
-        <li><a class="hover:underline" href="/contact.html">Contact us</a></li>
+        <li><a class="hover:underline" href="/contact.html">Contact</a></li>
       </ul>
     </div>
     <div>
